parser.output
State 53 conflicts: 1 shift/reduce
State 87 conflicts: 5 shift/reduce
State 88 conflicts: 5 shift/reduce
State 89 conflicts: 5 shift/reduce
State 90 conflicts: 5 shift/reduce
State 91 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program function

    3 function_header: FUNC TOKEN_IDENTIFIER

    4 function: function_header LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    5 new_parameters: %empty
    6               | new_parameter

    7 new_parameter: type TOKEN_IDENTIFIER
    8              | type TOKEN_IDENTIFIER COMMA new_parameter

    9 parameters: %empty
   10           | parameter

   11 parameter: TOKEN_IDENTIFIER
   12          | TOKEN_IDENTIFIER COMMA parameter

   13 statements: %empty
   14           | statements statement

   15 statement: new_variable
   16          | new_array
   17          | function_call
   18          | print
   19          | if_statement
   20          | while_statement
   21          | read_statement
   22          | return_statement
   23          | assign_statement
   24          | BREAK SEMICOLON
   25          | CONTINUE SEMICOLON

   26 if_statement: IF boolean_expressions LEFTCURLY statements RIGHTCURLY else_statement

   27 new_array: type LEFTBRACKET NUMBER RIGHTBRACKET TOKEN_IDENTIFIER SEMICOLON

   28 array_get_pointer: TOKEN_IDENTIFIER LEFTBRACKET NUMBER RIGHTBRACKET

   29 assign_statement: TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON
   30                 | TOKEN_IDENTIFIER ASSIGN expressions SEMICOLON
   31                 | array_get_pointer ASSIGN expressions SEMICOLON

   32 return_statement: RETURN TOKEN_IDENTIFIER SEMICOLON

   33 else_statement: ELSE LEFTCURLY statement RIGHTCURLY
   34               | %empty

   35 while_statement: WHILE boolean_expressions LEFTCURLY statements RIGHTCURLY

   36 read_statement: READ LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

   37 boolean_expressions: expression GREATER expression
   38                    | expression LESS expression
   39                    | expression LESSEQUAL expression
   40                    | expression GREATEREQUAL expression
   41                    | expression EQUALITY expression
   42                    | expression NOTEQUAL expression

   43 new_variable: type TOKEN_IDENTIFIER SEMICOLON
   44             | type TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON

   45 variable: NUMBER
   46         | TOKEN_IDENTIFIER
   47         | array_get_pointer
   48         | function_call

   49 type: INT

   50 print: PRINT LEFTPAREN variable RIGHTPAREN SEMICOLON

   51 function_call: TOKEN_IDENTIFIER LEFTPAREN parameters SEMICOLON

   52 expressions: %empty
   53            | expressions expression

   54 expression: variable
   55           | expression PLUS expression
   56           | expression SUBTRACT expression
   57           | expression MULTIPLY expression
   58           | expression DIVIDE expression
   59           | expression MODULUS expression


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNC (258) 3
RETURN (259) 32
INT (260) 49
PRINT (261) 50
BREAK (262) 24
LEFTPAREN (263) 4 36 50 51
RIGHTPAREN (264) 4 36 50
LEFTCURLY (265) 4 26 33 35
RIGHTCURLY (266) 4 26 33 35
COMMA (267) 8 12
SEMICOLON (268) 24 25 27 29 30 31 32 36 43 44 50 51
PLUS (269) 55
SUBTRACT (270) 56
MULTIPLY (271) 57
DIVIDE (272) 58
MODULUS (273) 59
ASSIGN (274) 29 30 31 44
READ (275) 36
WHILE (276) 35
IF (277) 26
ELSE (278) 33
CONTINUE (279) 25
LEFTBRACKET (280) 27 28
RIGHTBRACKET (281) 27 28
LESS (282) 38
LESSEQUAL (283) 39
GREATER (284) 37
GREATEREQUAL (285) 40
EQUALITY (286) 41
NOTEQUAL (287) 42
NUMBER (288) 27 28 29 44 45
TOKEN_IDENTIFIER (289) 3 7 8 11 12 27 28 29 30 32 36 43 44 46 51


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1 2, on right: 0 2
function_header (37)
    on left: 3, on right: 4
function (38)
    on left: 4, on right: 2
new_parameters (39)
    on left: 5 6, on right: 4
new_parameter (40)
    on left: 7 8, on right: 6 8
parameters (41)
    on left: 9 10, on right: 51
parameter (42)
    on left: 11 12, on right: 10 12
statements (43)
    on left: 13 14, on right: 4 14 26 35
statement (44)
    on left: 15 16 17 18 19 20 21 22 23 24 25, on right: 14 33
if_statement (45)
    on left: 26, on right: 19
new_array (46)
    on left: 27, on right: 16
array_get_pointer (47)
    on left: 28, on right: 31 47
assign_statement (48)
    on left: 29 30 31, on right: 23
return_statement (49)
    on left: 32, on right: 22
else_statement (50)
    on left: 33 34, on right: 26
while_statement (51)
    on left: 35, on right: 20
read_statement (52)
    on left: 36, on right: 21
boolean_expressions (53)
    on left: 37 38 39 40 41 42, on right: 26 35
new_variable (54)
    on left: 43 44, on right: 15
variable (55)
    on left: 45 46 47 48, on right: 50 54
type (56)
    on left: 49, on right: 7 8 27 43 44
print (57)
    on left: 50, on right: 18
function_call (58)
    on left: 51, on right: 17 48
expressions (59)
    on left: 52 53, on right: 30 31 53
expression (60)
    on left: 54 55 56 57 58 59, on right: 37 38 39 40 41 42 53 55 56
    57 58 59


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    2 program: program . function

    $end  shift, and go to state 2
    FUNC  shift, and go to state 3

    function_header  go to state 4
    function         go to state 5


State 2

    0 $accept: program $end .

    $default  accept


State 3

    3 function_header: FUNC . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 6


State 4

    4 function: function_header . LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    LEFTPAREN  shift, and go to state 7


State 5

    2 program: program function .

    $default  reduce using rule 2 (program)


State 6

    3 function_header: FUNC TOKEN_IDENTIFIER .

    $default  reduce using rule 3 (function_header)


State 7

    4 function: function_header LEFTPAREN . new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    INT  shift, and go to state 8

    $default  reduce using rule 5 (new_parameters)

    new_parameters  go to state 9
    new_parameter   go to state 10
    type            go to state 11


State 8

   49 type: INT .

    $default  reduce using rule 49 (type)


State 9

    4 function: function_header LEFTPAREN new_parameters . RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    RIGHTPAREN  shift, and go to state 12


State 10

    6 new_parameters: new_parameter .

    $default  reduce using rule 6 (new_parameters)


State 11

    7 new_parameter: type . TOKEN_IDENTIFIER
    8              | type . TOKEN_IDENTIFIER COMMA new_parameter

    TOKEN_IDENTIFIER  shift, and go to state 13


State 12

    4 function: function_header LEFTPAREN new_parameters RIGHTPAREN . LEFTCURLY statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 14


State 13

    7 new_parameter: type TOKEN_IDENTIFIER .
    8              | type TOKEN_IDENTIFIER . COMMA new_parameter

    COMMA  shift, and go to state 15

    $default  reduce using rule 7 (new_parameter)


State 14

    4 function: function_header LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY . statements RIGHTCURLY

    $default  reduce using rule 13 (statements)

    statements  go to state 16


State 15

    8 new_parameter: type TOKEN_IDENTIFIER COMMA . new_parameter

    INT  shift, and go to state 8

    new_parameter  go to state 17
    type           go to state 11


State 16

    4 function: function_header LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements . RIGHTCURLY
   14 statements: statements . statement

    RETURN            shift, and go to state 18
    INT               shift, and go to state 8
    PRINT             shift, and go to state 19
    BREAK             shift, and go to state 20
    RIGHTCURLY        shift, and go to state 21
    READ              shift, and go to state 22
    WHILE             shift, and go to state 23
    IF                shift, and go to state 24
    CONTINUE          shift, and go to state 25
    TOKEN_IDENTIFIER  shift, and go to state 26

    statement          go to state 27
    if_statement       go to state 28
    new_array          go to state 29
    array_get_pointer  go to state 30
    assign_statement   go to state 31
    return_statement   go to state 32
    while_statement    go to state 33
    read_statement     go to state 34
    new_variable       go to state 35
    type               go to state 36
    print              go to state 37
    function_call      go to state 38


State 17

    8 new_parameter: type TOKEN_IDENTIFIER COMMA new_parameter .

    $default  reduce using rule 8 (new_parameter)


State 18

   32 return_statement: RETURN . TOKEN_IDENTIFIER SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 39


State 19

   50 print: PRINT . LEFTPAREN variable RIGHTPAREN SEMICOLON

    LEFTPAREN  shift, and go to state 40


State 20

   24 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 41


State 21

    4 function: function_header LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY .

    $default  reduce using rule 4 (function)


State 22

   36 read_statement: READ . LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

    LEFTPAREN  shift, and go to state 42


State 23

   35 while_statement: WHILE . boolean_expressions LEFTCURLY statements RIGHTCURLY

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer    go to state 45
    boolean_expressions  go to state 46
    variable             go to state 47
    function_call        go to state 48
    expression           go to state 49


State 24

   26 if_statement: IF . boolean_expressions LEFTCURLY statements RIGHTCURLY else_statement

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer    go to state 45
    boolean_expressions  go to state 50
    variable             go to state 47
    function_call        go to state 48
    expression           go to state 49


State 25

   25 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 26

   28 array_get_pointer: TOKEN_IDENTIFIER . LEFTBRACKET NUMBER RIGHTBRACKET
   29 assign_statement: TOKEN_IDENTIFIER . ASSIGN NUMBER SEMICOLON
   30                 | TOKEN_IDENTIFIER . ASSIGN expressions SEMICOLON
   51 function_call: TOKEN_IDENTIFIER . LEFTPAREN parameters SEMICOLON

    LEFTPAREN    shift, and go to state 52
    ASSIGN       shift, and go to state 53
    LEFTBRACKET  shift, and go to state 54


State 27

   14 statements: statements statement .

    $default  reduce using rule 14 (statements)


State 28

   19 statement: if_statement .

    $default  reduce using rule 19 (statement)


State 29

   16 statement: new_array .

    $default  reduce using rule 16 (statement)


State 30

   31 assign_statement: array_get_pointer . ASSIGN expressions SEMICOLON

    ASSIGN  shift, and go to state 55


State 31

   23 statement: assign_statement .

    $default  reduce using rule 23 (statement)


State 32

   22 statement: return_statement .

    $default  reduce using rule 22 (statement)


State 33

   20 statement: while_statement .

    $default  reduce using rule 20 (statement)


State 34

   21 statement: read_statement .

    $default  reduce using rule 21 (statement)


State 35

   15 statement: new_variable .

    $default  reduce using rule 15 (statement)


State 36

   27 new_array: type . LEFTBRACKET NUMBER RIGHTBRACKET TOKEN_IDENTIFIER SEMICOLON
   43 new_variable: type . TOKEN_IDENTIFIER SEMICOLON
   44             | type . TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON

    LEFTBRACKET       shift, and go to state 56
    TOKEN_IDENTIFIER  shift, and go to state 57


State 37

   18 statement: print .

    $default  reduce using rule 18 (statement)


State 38

   17 statement: function_call .

    $default  reduce using rule 17 (statement)


State 39

   32 return_statement: RETURN TOKEN_IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 58


State 40

   50 print: PRINT LEFTPAREN . variable RIGHTPAREN SEMICOLON

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 59
    function_call      go to state 48


State 41

   24 statement: BREAK SEMICOLON .

    $default  reduce using rule 24 (statement)


State 42

   36 read_statement: READ LEFTPAREN . TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 60


State 43

   45 variable: NUMBER .

    $default  reduce using rule 45 (variable)


State 44

   28 array_get_pointer: TOKEN_IDENTIFIER . LEFTBRACKET NUMBER RIGHTBRACKET
   46 variable: TOKEN_IDENTIFIER .
   51 function_call: TOKEN_IDENTIFIER . LEFTPAREN parameters SEMICOLON

    LEFTPAREN    shift, and go to state 52
    LEFTBRACKET  shift, and go to state 54

    $default  reduce using rule 46 (variable)


State 45

   47 variable: array_get_pointer .

    $default  reduce using rule 47 (variable)


State 46

   35 while_statement: WHILE boolean_expressions . LEFTCURLY statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 61


State 47

   54 expression: variable .

    $default  reduce using rule 54 (expression)


State 48

   48 variable: function_call .

    $default  reduce using rule 48 (variable)


State 49

   37 boolean_expressions: expression . GREATER expression
   38                    | expression . LESS expression
   39                    | expression . LESSEQUAL expression
   40                    | expression . GREATEREQUAL expression
   41                    | expression . EQUALITY expression
   42                    | expression . NOTEQUAL expression
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS          shift, and go to state 62
    SUBTRACT      shift, and go to state 63
    MULTIPLY      shift, and go to state 64
    DIVIDE        shift, and go to state 65
    MODULUS       shift, and go to state 66
    LESS          shift, and go to state 67
    LESSEQUAL     shift, and go to state 68
    GREATER       shift, and go to state 69
    GREATEREQUAL  shift, and go to state 70
    EQUALITY      shift, and go to state 71
    NOTEQUAL      shift, and go to state 72


State 50

   26 if_statement: IF boolean_expressions . LEFTCURLY statements RIGHTCURLY else_statement

    LEFTCURLY  shift, and go to state 73


State 51

   25 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 25 (statement)


State 52

   51 function_call: TOKEN_IDENTIFIER LEFTPAREN . parameters SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 74

    $default  reduce using rule 9 (parameters)

    parameters  go to state 75
    parameter   go to state 76


State 53

   29 assign_statement: TOKEN_IDENTIFIER ASSIGN . NUMBER SEMICOLON
   30                 | TOKEN_IDENTIFIER ASSIGN . expressions SEMICOLON

    NUMBER  shift, and go to state 77

    NUMBER    [reduce using rule 52 (expressions)]
    $default  reduce using rule 52 (expressions)

    expressions  go to state 78


State 54

   28 array_get_pointer: TOKEN_IDENTIFIER LEFTBRACKET . NUMBER RIGHTBRACKET

    NUMBER  shift, and go to state 79


State 55

   31 assign_statement: array_get_pointer ASSIGN . expressions SEMICOLON

    $default  reduce using rule 52 (expressions)

    expressions  go to state 80


State 56

   27 new_array: type LEFTBRACKET . NUMBER RIGHTBRACKET TOKEN_IDENTIFIER SEMICOLON

    NUMBER  shift, and go to state 81


State 57

   43 new_variable: type TOKEN_IDENTIFIER . SEMICOLON
   44             | type TOKEN_IDENTIFIER . ASSIGN NUMBER SEMICOLON

    SEMICOLON  shift, and go to state 82
    ASSIGN     shift, and go to state 83


State 58

   32 return_statement: RETURN TOKEN_IDENTIFIER SEMICOLON .

    $default  reduce using rule 32 (return_statement)


State 59

   50 print: PRINT LEFTPAREN variable . RIGHTPAREN SEMICOLON

    RIGHTPAREN  shift, and go to state 84


State 60

   36 read_statement: READ LEFTPAREN TOKEN_IDENTIFIER . RIGHTPAREN SEMICOLON

    RIGHTPAREN  shift, and go to state 85


State 61

   35 while_statement: WHILE boolean_expressions LEFTCURLY . statements RIGHTCURLY

    $default  reduce using rule 13 (statements)

    statements  go to state 86


State 62

   55 expression: expression PLUS . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 87


State 63

   56 expression: expression SUBTRACT . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 88


State 64

   57 expression: expression MULTIPLY . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 89


State 65

   58 expression: expression DIVIDE . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 90


State 66

   59 expression: expression MODULUS . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 91


State 67

   38 boolean_expressions: expression LESS . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 92


State 68

   39 boolean_expressions: expression LESSEQUAL . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 93


State 69

   37 boolean_expressions: expression GREATER . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 94


State 70

   40 boolean_expressions: expression GREATEREQUAL . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 95


State 71

   41 boolean_expressions: expression EQUALITY . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 96


State 72

   42 boolean_expressions: expression NOTEQUAL . expression

    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 97


State 73

   26 if_statement: IF boolean_expressions LEFTCURLY . statements RIGHTCURLY else_statement

    $default  reduce using rule 13 (statements)

    statements  go to state 98


State 74

   11 parameter: TOKEN_IDENTIFIER .
   12          | TOKEN_IDENTIFIER . COMMA parameter

    COMMA  shift, and go to state 99

    $default  reduce using rule 11 (parameter)


State 75

   51 function_call: TOKEN_IDENTIFIER LEFTPAREN parameters . SEMICOLON

    SEMICOLON  shift, and go to state 100


State 76

   10 parameters: parameter .

    $default  reduce using rule 10 (parameters)


State 77

   29 assign_statement: TOKEN_IDENTIFIER ASSIGN NUMBER . SEMICOLON

    SEMICOLON  shift, and go to state 101


State 78

   30 assign_statement: TOKEN_IDENTIFIER ASSIGN expressions . SEMICOLON
   53 expressions: expressions . expression

    SEMICOLON         shift, and go to state 102
    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 103


State 79

   28 array_get_pointer: TOKEN_IDENTIFIER LEFTBRACKET NUMBER . RIGHTBRACKET

    RIGHTBRACKET  shift, and go to state 104


State 80

   31 assign_statement: array_get_pointer ASSIGN expressions . SEMICOLON
   53 expressions: expressions . expression

    SEMICOLON         shift, and go to state 105
    NUMBER            shift, and go to state 43
    TOKEN_IDENTIFIER  shift, and go to state 44

    array_get_pointer  go to state 45
    variable           go to state 47
    function_call      go to state 48
    expression         go to state 103


State 81

   27 new_array: type LEFTBRACKET NUMBER . RIGHTBRACKET TOKEN_IDENTIFIER SEMICOLON

    RIGHTBRACKET  shift, and go to state 106


State 82

   43 new_variable: type TOKEN_IDENTIFIER SEMICOLON .

    $default  reduce using rule 43 (new_variable)


State 83

   44 new_variable: type TOKEN_IDENTIFIER ASSIGN . NUMBER SEMICOLON

    NUMBER  shift, and go to state 107


State 84

   50 print: PRINT LEFTPAREN variable RIGHTPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 108


State 85

   36 read_statement: READ LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 109


State 86

   14 statements: statements . statement
   35 while_statement: WHILE boolean_expressions LEFTCURLY statements . RIGHTCURLY

    RETURN            shift, and go to state 18
    INT               shift, and go to state 8
    PRINT             shift, and go to state 19
    BREAK             shift, and go to state 20
    RIGHTCURLY        shift, and go to state 110
    READ              shift, and go to state 22
    WHILE             shift, and go to state 23
    IF                shift, and go to state 24
    CONTINUE          shift, and go to state 25
    TOKEN_IDENTIFIER  shift, and go to state 26

    statement          go to state 27
    if_statement       go to state 28
    new_array          go to state 29
    array_get_pointer  go to state 30
    assign_statement   go to state 31
    return_statement   go to state 32
    while_statement    go to state 33
    read_statement     go to state 34
    new_variable       go to state 35
    type               go to state 36
    print              go to state 37
    function_call      go to state 38


State 87

   55 expression: expression . PLUS expression
   55           | expression PLUS expression .
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    PLUS      [reduce using rule 55 (expression)]
    SUBTRACT  [reduce using rule 55 (expression)]
    MULTIPLY  [reduce using rule 55 (expression)]
    DIVIDE    [reduce using rule 55 (expression)]
    MODULUS   [reduce using rule 55 (expression)]
    $default  reduce using rule 55 (expression)


State 88

   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   56           | expression SUBTRACT expression .
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    PLUS      [reduce using rule 56 (expression)]
    SUBTRACT  [reduce using rule 56 (expression)]
    MULTIPLY  [reduce using rule 56 (expression)]
    DIVIDE    [reduce using rule 56 (expression)]
    MODULUS   [reduce using rule 56 (expression)]
    $default  reduce using rule 56 (expression)


State 89

   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   57           | expression MULTIPLY expression .
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    PLUS      [reduce using rule 57 (expression)]
    SUBTRACT  [reduce using rule 57 (expression)]
    MULTIPLY  [reduce using rule 57 (expression)]
    DIVIDE    [reduce using rule 57 (expression)]
    MODULUS   [reduce using rule 57 (expression)]
    $default  reduce using rule 57 (expression)


State 90

   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   58           | expression DIVIDE expression .
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    PLUS      [reduce using rule 58 (expression)]
    SUBTRACT  [reduce using rule 58 (expression)]
    MULTIPLY  [reduce using rule 58 (expression)]
    DIVIDE    [reduce using rule 58 (expression)]
    MODULUS   [reduce using rule 58 (expression)]
    $default  reduce using rule 58 (expression)


State 91

   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression
   59           | expression MODULUS expression .

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    PLUS      [reduce using rule 59 (expression)]
    SUBTRACT  [reduce using rule 59 (expression)]
    MULTIPLY  [reduce using rule 59 (expression)]
    DIVIDE    [reduce using rule 59 (expression)]
    MODULUS   [reduce using rule 59 (expression)]
    $default  reduce using rule 59 (expression)


State 92

   38 boolean_expressions: expression LESS expression .
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    $default  reduce using rule 38 (boolean_expressions)


State 93

   39 boolean_expressions: expression LESSEQUAL expression .
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    $default  reduce using rule 39 (boolean_expressions)


State 94

   37 boolean_expressions: expression GREATER expression .
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    $default  reduce using rule 37 (boolean_expressions)


State 95

   40 boolean_expressions: expression GREATEREQUAL expression .
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    $default  reduce using rule 40 (boolean_expressions)


State 96

   41 boolean_expressions: expression EQUALITY expression .
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    $default  reduce using rule 41 (boolean_expressions)


State 97

   42 boolean_expressions: expression NOTEQUAL expression .
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    $default  reduce using rule 42 (boolean_expressions)


State 98

   14 statements: statements . statement
   26 if_statement: IF boolean_expressions LEFTCURLY statements . RIGHTCURLY else_statement

    RETURN            shift, and go to state 18
    INT               shift, and go to state 8
    PRINT             shift, and go to state 19
    BREAK             shift, and go to state 20
    RIGHTCURLY        shift, and go to state 111
    READ              shift, and go to state 22
    WHILE             shift, and go to state 23
    IF                shift, and go to state 24
    CONTINUE          shift, and go to state 25
    TOKEN_IDENTIFIER  shift, and go to state 26

    statement          go to state 27
    if_statement       go to state 28
    new_array          go to state 29
    array_get_pointer  go to state 30
    assign_statement   go to state 31
    return_statement   go to state 32
    while_statement    go to state 33
    read_statement     go to state 34
    new_variable       go to state 35
    type               go to state 36
    print              go to state 37
    function_call      go to state 38


State 99

   12 parameter: TOKEN_IDENTIFIER COMMA . parameter

    TOKEN_IDENTIFIER  shift, and go to state 74

    parameter  go to state 112


State 100

   51 function_call: TOKEN_IDENTIFIER LEFTPAREN parameters SEMICOLON .

    $default  reduce using rule 51 (function_call)


State 101

   29 assign_statement: TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON .

    $default  reduce using rule 29 (assign_statement)


State 102

   30 assign_statement: TOKEN_IDENTIFIER ASSIGN expressions SEMICOLON .

    $default  reduce using rule 30 (assign_statement)


State 103

   53 expressions: expressions expression .
   55 expression: expression . PLUS expression
   56           | expression . SUBTRACT expression
   57           | expression . MULTIPLY expression
   58           | expression . DIVIDE expression
   59           | expression . MODULUS expression

    PLUS      shift, and go to state 62
    SUBTRACT  shift, and go to state 63
    MULTIPLY  shift, and go to state 64
    DIVIDE    shift, and go to state 65
    MODULUS   shift, and go to state 66

    $default  reduce using rule 53 (expressions)


State 104

   28 array_get_pointer: TOKEN_IDENTIFIER LEFTBRACKET NUMBER RIGHTBRACKET .

    $default  reduce using rule 28 (array_get_pointer)


State 105

   31 assign_statement: array_get_pointer ASSIGN expressions SEMICOLON .

    $default  reduce using rule 31 (assign_statement)


State 106

   27 new_array: type LEFTBRACKET NUMBER RIGHTBRACKET . TOKEN_IDENTIFIER SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 113


State 107

   44 new_variable: type TOKEN_IDENTIFIER ASSIGN NUMBER . SEMICOLON

    SEMICOLON  shift, and go to state 114


State 108

   50 print: PRINT LEFTPAREN variable RIGHTPAREN SEMICOLON .

    $default  reduce using rule 50 (print)


State 109

   36 read_statement: READ LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON .

    $default  reduce using rule 36 (read_statement)


State 110

   35 while_statement: WHILE boolean_expressions LEFTCURLY statements RIGHTCURLY .

    $default  reduce using rule 35 (while_statement)


State 111

   26 if_statement: IF boolean_expressions LEFTCURLY statements RIGHTCURLY . else_statement

    ELSE  shift, and go to state 115

    $default  reduce using rule 34 (else_statement)

    else_statement  go to state 116


State 112

   12 parameter: TOKEN_IDENTIFIER COMMA parameter .

    $default  reduce using rule 12 (parameter)


State 113

   27 new_array: type LEFTBRACKET NUMBER RIGHTBRACKET TOKEN_IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 117


State 114

   44 new_variable: type TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON .

    $default  reduce using rule 44 (new_variable)


State 115
